# INE5420

./: materials.mtl  pylintrc  pyproject.toml  requirements.txt  run.py
control/: controller.py  transform.py
model/: factory.py  objects.py
src/control/: controller.py  transform.py
src/model/: __init__.py  factory.py  objects.py
src/tools/: clipper.py  wavefront_reader.py
src/view/: dialog.py  main_window.py  object_item.py  viewport.py
view/: dialog.py  main_window.py  object_item.py  viewport.py
