[tool.poetry]
name = "basic-interface"
version = "0.1.0"
description = ""
authors = ["Thiago Sant' Helena <thiago.sant.helena@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyqt5 = "^5.14.1"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
