[tool.poetry]
name = "basic-interface"
version = "0.1.0"
description = ""
authors = ["Thiago Sant' Helena <thiago.sant.helena@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyqt5 = "^5.14.1"
numpy = "^1.18.1"
mypy = "^0.782"
PyQt5-stubs = "^5.14.2"
loguru = "^0.5.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
